--- a/ms-users/launcher/pom.xml
+++ b/ms-users/launcher/pom.xml
@@ -8,13 +8,13 @@
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    
+
     <artifactId>launcher</artifactId>
     <packaging>jar</packaging>
 
     <name>${project.artifactId}</name>
-    <description />
-    
+    <description/>
+
     <dependencies>
         <!-- Dependencies for other modules  -->
         <dependency>
@@ -33,13 +33,21 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>api</artifactId>
         </dependency>
-        
+
         <!-- Dependencies for Spring  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
-       
+
+        <!-- Dependencies for Swagger  -->
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.1.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
