--- a/.github/workflows/java-maven.yml
+++ b/.github/workflows/java-maven.yml
@@ -19,8 +19,8 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
           cache: maven
-      - name: Build with Maven
-        run: mvn clean compile
+      - name: Build with Maven Ms-database
+        run: ./ms-database/mvn clean compile
 
       - name: Run tests
-        run: mvn test
+        run: ./ms-database/mvn test
