--- a/.github/workflows/java-maven.yml
+++ b/.github/workflows/java-maven.yml
@@ -19,6 +19,10 @@ jobs:
           java-version: '17'
           distribution: 'adopt'
           cache: maven
+          
+      - name: Giving execute permission to mvnw
+        run: chmod +x ./ms-database/mvnw          
+          
       - name: Build with Maven Ms-database
         run: ./ms-database/mvnw clean compile
 
