--- a/ms-users/api/pom.xml
+++ b/ms-users/api/pom.xml
@@ -8,10 +8,10 @@
         <version>0.0.1-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
-    
+
     <artifactId>api</artifactId>
     <name>api</name>
-   
+
     <dependencies>
         <!-- Dependencies for other modules  -->
         <dependency>
@@ -22,7 +22,13 @@
             <groupId>${project.groupId}</groupId>
             <artifactId>application</artifactId>
         </dependency>
-        
+
+        <!-- Dependencies for api  -->
+        <dependency>
+            <groupId>com.management.apis</groupId>
+            <artifactId>ms-apis-users</artifactId>
+        </dependency>
+
         <!-- Dependencies for Spring  -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -33,13 +39,7 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-
-        <dependency>
-            <groupId>org.springdoc</groupId>
-            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.1.0</version>
-        </dependency>
-
+ 
         <!-- Dependencies for test -->
         <dependency>
             <groupId>${project.groupId}</groupId>
@@ -48,7 +48,58 @@
             <classifier>tests</classifier>
             <scope>test</scope>
         </dependency>
-        
+
     </dependencies>
+
+    <build>
+        <plugins>
+            <!-- Generate api class in generate sources -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>3.1.2</version>
+                <executions>
+                    <execution>
+                        <id>copy-api-user-classes</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>unpack</goal>
+                        </goals>
+                        <configuration>
+                            <artifactItems>
+                                <artifactItem>
+                                    <groupId>${api-user.groupId}</groupId>
+                                    <artifactId>${api-user.artifactId}</artifactId>
+                                    <version>${api-user.version}</version>
+                                    <outputDirectory>${project.build.directory}/generated-sources/openapi</outputDirectory>
+                                    <includes>**/*.class</includes>
+                                </artifactItem>
+                            </artifactItems>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <!-- Add generate sources to compilation -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>add-generated-sources-to-compilation</id>
+                        <phase>generate-sources</phase>
+                        <goals>
+                            <goal>add-source</goal>
+                        </goals>
+                        <configuration>
+                            <sources>
+                                <source>${project.build.directory}/generated-sources/openapi</source>
+                            </sources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
 </project>
