--- a/ms-users/launcher/pom.xml
+++ b/ms-users/launcher/pom.xml
@@ -41,11 +41,11 @@
         </dependency>
 
         <!-- Dependencies for Swagger  -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
             <version>2.1.0</version>
-        </dependency>
+        </dependency>-->
 
 
     </dependencies>
