--- a/ms-apis/api-database/pom.xml
+++ b/ms-apis/api-database/pom.xml
@@ -26,51 +26,62 @@
                 <artifactId>maven-jar-plugin</artifactId>
                 <version>3.2.0</version>
                 <configuration>
-                    <skip>true</skip>
+                    <!--<skip>true</skip>-->
+                    <includes>
+                        <include>openapi-rest.yml</include>
+                        <include>${project.basedir}/api/v${project.version}/openapi-rest.yml</include>
+                    </includes>
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.openapitools</groupId>
-                <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>5.3.0</version>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.10</version>
                 <executions>
                     <execution>
+                        <id>attach-artifacts</id>
+                        <phase>package</phase>
                         <goals>
-                            <goal>generate</goal>
+                            <goal>attach-artifact</goal>
                         </goals>
                         <configuration>
-                            <inputSpec>${project.basedir}/api/v${version}/openapi-rest.yml</inputSpec>
-                            <output>${project.build.directory}/generated-sources/openapi</output>
-                            <generatorName>spring</generatorName>
-                            <modelNameSuffix>Dto</modelNameSuffix>
-                            <configOptions>
-                                <packageName>com.management.api.database</packageName>
-                                <invokerPackage>com.management.api.database.services</invokerPackage>
-                                <apiPackage>com.management.api.database.services</apiPackage>
-                                <modelPackage>com.management.api.database.dto</modelPackage>
-                                <basePackage>com.management.api.database</basePackage>
-                                <configPackage>com.management.api.database</configPackage>
-                                <sourceFolder>/src/gen/java/main</sourceFolder>
-                                <delegatePattern>true</delegatePattern>
-                                <useTags>true</useTags>
-                                <singleContentTypes>true</singleContentTypes>
-                                <interfaceOnly>true</interfaceOnly>
-                                <serializableModel>true</serializableModel>
-                                <dateLibrary>java8</dateLibrary>
-                                <useOptional>true</useOptional>
-                                <swaggerDocketConfig>false</swaggerDocketConfig>
-                                <performBeanValidation>false</performBeanValidation>
-                                <useBeanValidation>false</useBeanValidation>
-                            </configOptions>
-
-                            <generateApiTests>false</generateApiTests>
-                            <generateApiDocumentation>false</generateApiDocumentation>
-                            <generateModelTests>false</generateModelTests>
-                            <generateModelDocumentation>false</generateModelDocumentation>
+                            <artifacts>
+                                <artifact>
+                                    <file>${project.basedir}/api/v${project.version}/openapi-rest.yml</file>
+                                    <type>yml</type>
+                                </artifact>
+                            </artifacts>
                         </configuration>
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>3.2.0</version>
+                <executions>
+                    <execution>
+                        <id>copy-openapi-yml</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${project.build.directory}</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${project.basedir}/api/v${project.version}</directory>
+                                    <includes>
+                                        <include>openapi-rest.yml</include>
+                                    </includes>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            
+            
         </plugins>
     </build>
     
