--- a/ms-users/launcher/src/main/resources/application.yml
+++ b/ms-users/launcher/src/main/resources/application.yml
@@ -5,6 +5,11 @@ logging:
     org.springframework.boot.autoconfigure.jdbc: DEBUG
     org.springframework.boot.autoconfigure.h2.H2ConsoleAutoConfiguration: DEBUG
 
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+
 app:
   name: ms-users
   version: 1.0.0
@@ -12,7 +17,7 @@ app:
   database:
     port: 3306
     name: app_management
-    username: userManagement
+    username: root
     password: pwdManagement
     host: localhost
     urlConfig: useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
@@ -33,7 +38,7 @@ spring:
     show-sql: true
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
+        dialect: org.hibernate.dialect.MySQLDialect
         format_sql: true
         use_sql_comments: true
         jdbc:
