--- a/ms-apis/api-user/pom.xml
+++ b/ms-apis/api-user/pom.xml
@@ -13,7 +13,6 @@
     <version>1.0</version>
     <packaging>jar</packaging>
     
-
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
@@ -34,7 +33,7 @@
             <plugin>
                 <groupId>org.openapitools</groupId>
                 <artifactId>openapi-generator-maven-plugin</artifactId>
-                <version>5.3.0</version>
+                <version>6.6.0</version>
                 <executions>
                     <execution>
                         <goals>
@@ -63,6 +62,7 @@
                                 <swaggerDocketConfig>false</swaggerDocketConfig>
                                 <performBeanValidation>false</performBeanValidation>
                                 <useBeanValidation>false</useBeanValidation>
+                                <generateSupportingFiles>true</generateSupportingFiles>
                             </configOptions>
 
                             <generateApiTests>false</generateApiTests>
@@ -75,5 +75,4 @@
             </plugin>
         </plugins>
     </build>
-    
 </project>
